--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "debug": "^4.1.1",
     "eslint": "^7.3.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
@@ -37,6 +38,9 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parse": "^0.1.0",
+    "custom-env": "^2.0.1",
+    "express": "^4.17.1",
+    "http": "0.0.1-security"
   }
 }
