add patterns repository

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-parse": "^0.1.0",
     "custom-env": "^2.0.1",
     "express": "^4.17.1",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "mongoose": "^5.9.19"
   }
 }
