--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-typescript": "^7.10.1",
     "@types/express": "^4.17.6",
     "@types/jest": "^26.0.0",
+    "@types/mongoose": "^5.7.27",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
